# Agent-Skills

./: .gitignore  LICENSE  README.md  pyproject.toml  skillpack.toml
docs/superpowers/plans/: 2026-06-06-skillpack-cli.md
docs/superpowers/specs/: 2026-06-06-gptbots-skill-publish-and-validator-design.md
gptbots-agent-skill/: README.md  SKILL.md  gptbots-agent-skill.skill
gptbots-agent-skill/references/: call-gptbots-api.md  create-gptbots-agent.md  create-gptbots-flowagent.md  create-gptbots-workflow.md  flowagent-components.md  materials-mapping.md  organize-knowledge-base.md  variables-reference.md  workflow-nodes.md
gptbots-agent-skill/scripts/: build_gptbots_agent.py  build_gptbots_config.py  build_gptbots_flowagent.py  build_gptbots_workflow.py  gptbots_prompts.py  validate_gptbots_config.py  validate_knowledge_files.py
skillpack/: __init__.py  archive.py  cli.py  config.py  limits.py  packager.py  problem.py  publisher.py  source.py  validator.py
tests/: conftest.py  test_archive.py  test_cli.py  test_config.py  test_limits.py  test_packager.py  test_publisher.py  test_source.py  test_validator.py
