[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skillpack"
version = "0.1.0"
description = "Validate, package, and publish the GPTBots Agent Skill"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
skillpack = "skillpack.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["skillpack*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
